Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -88,7 +88,7 @@
 @article{IntrusiveAds,
   author={Tucker, Catherine E},
   title={{The Economics of Advertising and Privacy}},
-  journal={{International journal of Industrial organization}},
+  journal={{International Journal of Industrial Organization}},
   volume={30},
   number={3},
   pages={326--329},
@@ -109,7 +109,7 @@
 @inproceedings{PWAs,
   author={Majchrzak, Tim A and Bi{\o}rn-Hansen, Andreas and Gr{\o}nli, Tor-Morten},
   title={{Progressive Web Apps: The Definite Approach to Cross-Platform Development?}},
-  booktitle={{In Proceedings of the 4th International Conference on Mobile Software Engineering and Systems (MOBILESoft’17)}},
+  booktitle={{Proceedings of the 4th International Conference on Mobile Software Engineering and Systems (MOBILESoft’17)}},
   year={2018},
   pages={35--45},
   address={IEEE Press, Piscataway, USA},
