--- a/thesis/paper/sections/4_implementation.tex
+++ b/thesis/paper/sections/4_implementation.tex
@@ -12,7 +12,7 @@ The Intertext engine implements several aspects of Intertext clients; most notab
 
 At the time of writing, all Intertext clients that are implemented so far were built with TypeScript; they simply import and use the engine as a dependency. Their build system picks up the engine and adds it to their final bundle. However this approach is not possible for potential future clients that do not built on a JavaScript runtime. To overcome this issue, the engine can be compiled as a Node module, and be deployed to a Node.js server. This gives us the ability to use the engine on any software system that can send or receive HTTP requests. Moreover, with the same logic, the engine can be deployed locally alongside any Intertext client that runs on a platform that can support Node.js runtime. It can then be deployed and served locally, and used to communicate with the local Intertext client using any protocol that is supported by the host platform as long as there exists a data exchange. 
 
-For instance, say a car manufacturer wanted to build an Intertext client for their in-car entertainment system using their own components. They could potentially install Node.js on their computer system, or even install a simple Raspbery Pi-like chip that can run Node.js. Then, they can install the engine as a standalone application in it, and utilise any protocol to build a communication channel between the Intertext client they built on their computer system and the chip. Then, they could serve the IUIDL code either through a network connection (if and when available), or from a locally running server, potentially from the same one the client uses to interact with the engine. 
+For instance, say a car manufacturer wanted to build an Intertext client for their in-car entertainment system using their own components. They could potentially install Node.js on their computer system, or even install a simple Raspbery Pi-like chip that can run Node.js. Then, they can install the engine as a standalone application in it, and utilise any protocol to build a communication channel between the Intertext client they built on their computer system and the chip. Then, they could serve the IUIDL~code either through a network connection (if and when available), or from a locally running server, potentially from the same one the client uses to interact with the engine. 
 
 \section{Layout}
 
@@ -22,7 +22,7 @@ The obvious solution to this problem was using web technologies, as responsive d
 
 \subsection{Layout System}
 
-The IUIDL offers a powerful layout system based on the CSS flexbox specification. It allows developers to build responsive layouts and position UI elements with ease. Intertext web client makes use of the browser implementation of CSS flexbox specification, whereas for other non-browser based clients, Facebook's open source library Yoga \footnote{\url{https://yogalayout.com}} will be used. Yoga is a layout engine that implements css flexbox specification in C++, therefore it can be used on any ecosystem that can execute C++ to calculate the positioning of the UI elements.
+The IUIDL offers a powerful layout system based on the CSS flexbox specification. It allows developers to build responsive layouts and position UI~elements with ease. Intertext web client makes use of the browser implementation of CSS flexbox specification, whereas for other non-browser based clients, Facebook's open source library Yoga\footnote{\url{https://yogalayout.com}} will be used. Yoga is a layout engine that implements css flexbox specification in C++, therefore it can be used on any ecosystem that can execute C++ to calculate the positioning of the UI~elements.
 
 \begin{figure}[H]
   \centering
@@ -40,7 +40,7 @@ Apart from flexbox-based positioning, the Intertext layout system also supports 
   \label{fig:absolute_positioning}%
 \end{figure}
 
-One advantage of this approach is that all our clients will render UI~elements using the same layout, which will give users a sense of familiarity when switching between the clients. For instance, when a user accustomed to using the web version of Intertext switches to, say the command-line version, they will immediately recognise the layout and be able to navigate without having to adjust. This approach will also allow developers to build responsive layouts to some extent. Given that the same UIDL code will be used to render on multiple clients, including the ones with narrow and small screens, responsiveness goes a long way. At the time of writing this paper, only flexbox features such as \texttt{flex-wrap} can be used for achieving a degree of responsiveness. However we plan to support screen size-aware variants of component properties, even conditional rendering of components based on the screen size. This can be thought of as \dquote{media queries} in css terminology. More on this will be presented in the \nameref{futureWork} section.
+One advantage of this approach is that all our clients will render UI~elements using the same layout, which will give users a sense of familiarity when switching between the clients. For instance, when a user accustomed to using the web version of Intertext switches to, say the command-line version, they will immediately recognise the layout and be able to navigate without having to adjust. This approach will also allow developers to build responsive layouts to some extent. Given that the same UIDL~code will be used to render on multiple clients, including the ones with narrow and small screens, responsiveness goes a long way. At the time of writing this paper, only flexbox features such as \texttt{flex-wrap} can be used for achieving a degree of responsiveness. However we plan to support screen size-aware variants of component properties, even conditional rendering of components based on the screen size. This can be thought of as \dquote{media queries} in css terminology. More on this will be presented in the \nameref{futureWork} section.
 
 \subsection{Unit System}
 
@@ -62,11 +62,11 @@ As a solution, we offer three different types of units; percentages, spaces and 
 \label{fig:layout_props_example}%
 \end{figure}
 
-IUIDL defines some properties that can be used to leverage the layout system to determine the size, spacing and positioning of UI elements. Figure~\ref{fig:layout_props_example} shows an example of how layout properties can be used to center a text in a block. For positioning, \texttt{position} prop can be used, which takes \texttt{relative} or \texttt{absolute}. The default is \texttt{relative}. For spacing, supported values are \texttt{top}, \texttt{bottom}, \texttt{left}, \texttt{right}, \texttt{margin}, \texttt{marginTop}, \texttt{marginBottom}, \texttt{marginLeft}, \texttt{marginRight}, \texttt{padding}, \texttt{paddingTop}, \texttt{paddingBottom}, \texttt{paddingLeft} and \newline \texttt{paddingRight}. As for sizing, accepted values are \texttt{width}, \texttt{minWidth}, \texttt{maxWidth}, \texttt{height}, \texttt{minHeight} and \texttt{maxHeight}. All these values can take all supported unit types. To leverage the flexbox properties, the accepted properties are \texttt{alignContent}, \texttt{alignItems}, \texttt{alignSelf}, \texttt{flexDirection}, \texttt{flexWrap}, \texttt{flexGrow}, \texttt{flexShrink}, \texttt{flexBasis} and \texttt{justifyContent}. Flexbox properties follow the flexbox specification \footnote{CSS Flexible Box Layout Module Level 1: \url{https://www.w3.org/TR/css-flexbox-1}}. All layout properties mentioned above are accepted by and can be used with every Intertext component.
+IUIDL defines some properties that can be used to leverage the layout system to determine the size, spacing and positioning of UI~elements. Figure~\ref{fig:layout_props_example} shows an example of how layout properties can be used to center a text in a block. For positioning, \texttt{position} prop can be used, which takes \texttt{relative} or \texttt{absolute}. The default is \texttt{relative}. For spacing, supported values are \texttt{top}, \texttt{bottom}, \texttt{left}, \texttt{right}, \texttt{margin}, \texttt{marginTop}, \texttt{marginBottom}, \texttt{marginLeft}, \texttt{marginRight}, \texttt{padding}, \texttt{paddingTop}, \texttt{paddingBottom}, \texttt{paddingLeft} and \newline \texttt{paddingRight}. As for sizing, accepted values are \texttt{width}, \texttt{minWidth}, \texttt{maxWidth}, \texttt{height}, \texttt{minHeight} and \texttt{maxHeight}. All these values can take all supported unit types. To leverage the flexbox properties, the accepted properties are \texttt{alignContent}, \texttt{alignItems}, \texttt{alignSelf}, \texttt{flexDirection}, \texttt{flexWrap}, \texttt{flexGrow}, \texttt{flexShrink}, \texttt{flexBasis} and \texttt{justifyContent}. Flexbox properties follow the flexbox specification\footnote{CSS Flexible Box Layout Module Level 1: \url{https://www.w3.org/TR/css-flexbox-1}}. All layout properties mentioned above are accepted by and can be used with every Intertext component.
 
 \section{Components}
 
-Components are the building blocks of Intertext applications, and consist of a set of pre-defined building blocks provided out of the box, which can be assembled to create a functional front-end application. They define the view layer, and they are handled differently on every Intertext client. While the rendering logic and flow of the components are fully driven by engine for consistency, it exposes functions for Intertext clients to register renderers for each component. The renderer function gets called by the engine during the render flow; it receives the props that are the given to the component, the children of the component (if any) that the function is expected to be passing on to the next call level of the recursive rendering flow, and are expected to return the component instance that needs to be rendered, which will later be used to render the UI. Figure \ref{fig:registering_renderer} shows an example snippet of the block renderer being registered to the engine on Intertext web client.
+Components are the building blocks of Intertext applications, and consist of a set of pre-defined building blocks provided out of the box, which can be assembled to create a functional front-end application. They define the view layer, and they are handled differently on every Intertext client. While the rendering logic and flow of the components are fully driven by engine for consistency, it exposes functions for Intertext clients to register renderers for each component. The renderer function gets called by the engine during the render flow; it receives the props that are the given to the component, the children of the component (if any) that the function is expected to be passing on to the next call level of the recursive rendering flow, and are expected to return the component instance that needs to be rendered, which will later be used to render the UI. Figure~\ref{fig:registering_renderer} shows an example snippet of the block renderer being registered to the engine on Intertext web client.
 
 \begin{figure}
 \begin{minipage}{\linewidth}
@@ -93,7 +93,7 @@ engine.renderer.registerBlockRenderer(({
 
 \subsection{Block}
 
-Block component is the most basic and primitive building block of Intertext. It can be thought of as the \texttt{div} element of HTML, its main purpose is to enclose components and other blocks. It is primarily a layout component, as it can group and position elements together. Moreover, it can also be used as a display component by accepting the \texttt{intent} property. When an intent is provided, it renders the block appropriately, thus it can be also used to convey a message. They also accept all layout properties. Figure \ref{fig:intents} shows an example of the block component on the web client, with and without intents.
+Block component is the most basic and primitive building block of Intertext. It can be thought of as the \texttt{div} element of HTML, its main purpose is to enclose components and other blocks. It is primarily a layout component, as it can group and position elements together. Moreover, it can also be used as a display component by accepting the \texttt{intent} property. When an intent is provided, it renders the block appropriately, thus it can be also used to convey a message. They also accept all layout properties. Figure~\ref{fig:intents} shows an example of the block component on the web client, with and without intents.
 
 \subsection{Grid}
 
@@ -131,9 +131,9 @@ By default, the \texttt{text} component renders inline, meaning, the render outp
 
 \subsection{Literals}
 
-Literals are standalone string (or number) values provided to components (other than the \texttt{text} component) as children. Figure \ref{fig:text_vs_literal} shows the difference between a literal and a text value. While literals are not exactly a component themselves, they are nonetheless values that rendering needs to be handled by each client, thus they need their own renderer. The way literals are handled differs from platform to platform. For instance on the web client they can be rendered as is, while on other platforms they might need to be wrapped within special renderers where the native platform cannot handle them.
+Literals are standalone string (or number) values provided to components (other than the \texttt{text} component) as children. Figure~\ref{fig:text_vs_literal} shows the difference between a literal and a text value. While literals are not exactly a component themselves, they are nonetheless values that rendering needs to be handled by each client, thus they need their own renderer. The way literals are handled differs from platform to platform. For instance on the web client they can be rendered as is, while on other platforms they might need to be wrapped within special renderers where the native platform cannot handle them.
 
-\begin{figure}
+\begin{figure}[htb]
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[language=xml]
 <text>Handled by text renderer</text>
@@ -147,9 +147,9 @@ Literals are standalone string (or number) values provided to components (other 
 
 \subsection{Collapse}
 
-The Collapse component can be used to hide long-form content within a collapse panel that is closed by default, and can be toggled open by clicking the handle. It accepts the complex attribute \texttt{handle} that takes the contents of the collapse handle. Its children will be rendered inside of the collapse. Collapse components can be nested, in which case each collapse component will operate individually. Figure \ref{fig:collapse_xml} shows how it can be used, and Figure \ref{fig:collapse} shows the render output of a collapse component on the Intertext web client.
+The Collapse component can be used to hide long-form content within a collapse panel that is closed by default, and can be toggled open by clicking the handle. It accepts the complex attribute \texttt{handle} that takes the contents of the collapse handle. Its children will be rendered inside of the collapse. Collapse components can be nested, in which case each collapse component will operate individually. Figure~\ref{fig:collapse_xml} shows how it can be used, and Figure~\ref{fig:collapse} shows the render output of a collapse component on the Intertext web client.
 
-\begin{figure}
+\begin{figure}[htb]
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[language=xml]
 <collapse>
@@ -172,6 +172,7 @@ The Collapse component can be used to hide long-form content within a collapse p
   \label{fig:collapse}%
 \end{figure}
 
+\newpage
 \subsection{Button}
 
 The Button component is simplest and the most primitive way of triggering commands. It accepts the \texttt{onClick} complex attribute, which can accept one or many commands under it.
@@ -182,7 +183,7 @@ The Input component can be used to take text based input from the user. The type
 
 \subsection{Image}
 
-This command can be used to display images on the screen, for platforms that can support displaying images. It takes \texttt{src} attribute to accept the image URI, and a textual identifier for the image as \texttt{alt} attribute to display for platforms that cannot support images, such as the Intertext command-line client. At the time of the writing, the only acceptable way to display images in Intertext clients is to serve the images from the same origin. This is a result of the same origin policy as our privacy requirements. So for instance if IUIDL codes are being served from \texttt{example.com} and the \texttt{src} attribute is provided as \texttt{/assets/image.png}, Intertext client will try to load the image from \texttt{example.com/assets/image.png}. We have future plans of allowing assets to be loaded from remote servers after permission is granted by the user, which is explained in the \nameref{futureWork} section.
+This command can be used to display images on the screen, for platforms that can support displaying images. It takes \texttt{src} attribute to accept the image URI, and a textual identifier for the image as \texttt{alt} attribute to display for platforms that cannot support images, such as the Intertext command-line client. At the time of the writing, the only acceptable way to display images in Intertext clients is to serve the images from the same origin. This is a result of the same origin policy as our privacy requirements. So for instance if IUIDL~codes are being served from \texttt{example.com} and the \texttt{src} attribute is provided as \texttt{/assets/image.png}, Intertext client will try to load the image from \texttt{example.com/assets/image.png}. We have future plans of allowing assets to be loaded from remote servers after permission is granted by the user, which is explained in the \nameref{futureWork} section.
 
 \section{Commands}
 
@@ -191,8 +192,6 @@ Similar to the components, commands also are registered to the engine. However t
 \subsection{State}
 
 The State command is used to set the state or retrieve read a value from the state. This command is expected to be registered to the engine by each Intertext client based on how the state is handled on the host platform. For instance, for the web client, the client state is controlled by the root React component, therefore it can only be initialised once the component is initialised and mounted on screen. 
-
-The State command accepts \texttt{key} attribute, which takes the key of the state variable. The children of the state command takes the value of the state to be set. Unlike other commands, state command can also be used as a component to display state values on the screen. When the state command is used without providing a value, the Intertext engine reads the state value, and interprets it as a literal value, uses the \texttt{literalRenderer} to display it on the screen. Additionally it takes the attribute \texttt{clear} to clear the state value. When this attribute is provided, Intertext client will clear the value instead of printing it even when no children is provided. Last but not least, a state command takes the attribute \texttt{persist} to target the persisted storage instead of the volatile storage. All attributes work the exact same way when \texttt{persist} attribute is provided, only difference being that it runs against the persisted storage. Figure \ref{fig:how_state_is_set_and_read} shows the syntax of how setting and reading the state works.
 
 \begin{figure}[htb]
 \begin{minipage}{\linewidth}
@@ -221,9 +220,11 @@ The State command accepts \texttt{key} attribute, which takes the key of the sta
 \label{fig:how_state_is_set_and_read}%
 \end{figure}
 
+The State command accepts \texttt{key} attribute, which takes the key of the state variable. The children of the state command takes the value of the state to be set. Unlike other commands, state command can also be used as a component to display state values on the screen. When the state command is used without providing a value, the Intertext engine reads the state value, and interprets it as a literal value, uses the \texttt{literalRenderer} to display it on the screen. Additionally it takes the attribute \texttt{clear} to clear the state value. When this attribute is provided, Intertext client will clear the value instead of printing it even when no children is provided. Last but not least, a state command takes the attribute \texttt{persist} to target the persisted storage instead of the volatile storage. All attributes work the exact same way when \texttt{persist} attribute is provided, only difference being that it runs against the persisted storage. Figure~\ref{fig:how_state_is_set_and_read} shows the syntax of how setting and reading the state works.
+
 \subsection{Alert}
 
-The Alert component is used to display a simple text-based message to the user. It uses the \texttt{<alert>}, and accepts the message as its children. An example usage can be seen in Figure \ref{fig:alert_command_usage}.
+The Alert component is used to display a simple text-based message to the user. It uses the \texttt{<alert>}, and accepts the message as its children. An example usage can be seen in Figure~\ref{fig:alert_command_usage}.
 
 \begin{figure}[htb]
 \begin{minipage}{\linewidth}
@@ -242,7 +243,7 @@ The Alert component is used to display a simple text-based message to the user. 
 
 \subsection{OnLoad}
 
-The \texttt{onload} command can be used to execute certain commands on page load. The concept of \dquote{page being loaded} differs from platform to platform, therefore each Intertext client is expected to implement this based on the platform requirements. For instance, the \dquote{load} event for the web client fires when the root React component is mounted on the screen. It takes no arguments, and takes one or more commands as its children. This command is especially useful for cases when a command needs to be executed straight away without waiting for user interaction, for things such as setting the state or making a request. An example usage of \texttt{onload} is shown in Figure \ref{fig:onload_usage}.
+The \texttt{onload} command can be used to execute certain commands on page load. The concept of \dquote{page being loaded} differs from platform to platform, therefore each Intertext client is expected to implement this based on the platform requirements. For instance, the \dquote{load} event for the web client fires when the root React component is mounted on the screen. It takes no arguments, and takes one or more commands as its children. This command is especially useful for cases when a command needs to be executed straight away without waiting for user interaction, for things such as setting the state or making a request. An example usage of \texttt{onload} is shown in Figure~\ref{fig:onload_usage}.
 
 \begin{figure}[htb]
 \begin{minipage}{\linewidth}
@@ -258,7 +259,7 @@ The \texttt{onload} command can be used to execute certain commands on page load
 
 \subsection{Timeout}
 
-The \texttt{timeout} command takes other commands as its children, and executes them with a given delay. The delay can be provided using the \texttt{delay} attribute in milliseconds. An example usage of \texttt{timeout} is shown in Figure \ref{fig:timeout_usage} to demonstrate how a simple \dquote{polling} mechanism can be implemented by combining \texttt{timeout} and \texttt{onload} commands.
+The \texttt{timeout} command takes other commands as its children, and executes them with a given delay. The delay can be provided using the \texttt{delay} attribute in milliseconds. An example usage of \texttt{timeout} is shown in Figure~\ref{fig:timeout_usage} to demonstrate how a simple \dquote{polling} mechanism can be implemented by combining \texttt{timeout} and \texttt{onload} commands.
 
 \begin{figure}[htb]
 \begin{minipage}{\linewidth}
@@ -289,8 +290,8 @@ The \texttt{request} command is a general purpose command that can be used to in
 
 All requests made to the backend are \texttt{POST} requests, in order to attach the overhead to each request body. With each request, Intertext client passes \texttt{state}, \texttt{persist} and \texttt{inputState} values; which are the volatile state, persisted state and the state of the input fields on the current page respectively. On the server side, these values can be used to build custom logic.
 
-With every request, the backend endpoint is expected to return some IUIDL code. The \texttt{request} command accepts the attribute \texttt{strategy} to specify what Intertext client should do with the IUIDL code server responds with. There are 5 strategies that can be passed; \texttt{replace}, \texttt{append}, \texttt{prepend}, \texttt{execute} and \texttt{ignore}. The \texttt{replace} option is the default option, and it simply replaces the entire page contents with the IUIDL code that are received. \texttt{append} and \texttt{prepend} as the name suggests appends and prepends the IUIDL code respectively to the existing packages on the screen. These strategies could be useful for implementing functions such as \dquote{load more}. \texttt{execute} strategy does not tamper with the existing page contents, however parses the received IUIDL code and tries to execute it as if they are commands, and the packages that are not commands gets ignored. This strategy can be used with the \texttt{onload} command for when the response of an endpoint is expected to be of type command. The \texttt{ignore} strategy completely ignores the response. It should be used only when the server-side needs to be notified of an event.
+With every request, the backend endpoint is expected to return some IUIDL~code. The \texttt{request} command accepts the attribute \texttt{strategy} to specify what Intertext client should do with the IUIDL~code server responds with. There are 5 strategies that can be passed; \texttt{replace}, \texttt{append}, \texttt{prepend}, \texttt{execute} and \texttt{ignore}. The \texttt{replace} option is the default option, and it simply replaces the entire page contents with the IUIDL~code that are received. \texttt{append} and \texttt{prepend} as the name suggests appends and prepends the IUIDL~code respectively to the existing packages on the screen. These strategies could be useful for implementing functions such as \dquote{load more}. \texttt{execute} strategy does not tamper with the existing page contents, however parses the received IUIDL~code and tries to execute it as if they are commands, and the packages that are not commands gets ignored. This strategy can be used with the \texttt{onload} command for when the response of an endpoint is expected to be of type command. The \texttt{ignore} strategy completely ignores the response. It should be used only when the server-side needs to be notified of an event.
 
 \subsection{Navigate}
 
-This command by nature is exactly the same as the \texttt{request} command. It accepts an \texttt{endpoint} argument, and makes an identical request as the \texttt{request} command makes to that endpoint. The reason why it is separated from \texttt{request} and made into its own command is to let the Intertext client know that the purpose of this request is to have user transition from one screen to another. This command does not accept the \texttt{strategy} attribute, and uses the \texttt{replace} strategy by default. Moreover, the Intertext client identifies this transition as a navigation and makes certain arrangements which is specific to the host platform. For instance, Intertext web client keeps Intertext address bars state, browser address bars state, and browsers history state in sync with the current page. This assures native browser features such as forward/back button to function with the Intertext app. When \texttt{navigation} command is used to transition from one screen to another, the client updates the two address bar states, and pushes the new state to the browsers history stack. Therefore, this command should only be used to transition between pages.
+This command by nature is exactly the same as the \texttt{request} command. It accepts an \texttt{endpoint} argument, and makes an identical request as the \texttt{request} command makes to that endpoint. The reason why it is separated from \texttt{request} and made into its own command is to let the Intertext client know that the purpose of this request is to have user transition from one screen to another. This command does not accept the \texttt{strategy} attribute, and uses the \texttt{replace} strategy by default. Moreover, the Intertext client identifies this transition as a navigation and makes certain arrangements which is specific to the host platform. For instance, Intertext web client keeps Intertext address bars state, browser address bars state, and browsers history state in sync with the current page. This assures native browser features such as forward/back button to function with the Intertext app. When \texttt{navigation} command is used to transition from one screen to another, the client updates the two address bar states, and pushes the new state to the browsers history stack.
