--- a/thesis/paper/sections/5_evaluation.tex
+++ b/thesis/paper/sections/5_evaluation.tex
@@ -24,7 +24,7 @@ Another thing that he notices is that they struggle to see the screen and read t
 
 \subsection{New Device On The Market}
 
-X, Inc is a promising startup working on a new kind of wearable device. This device can perform all functions of a mobile phone; make calls, send messages, take pictures, browse the internet and so on. It has the potential to replace mobile devices for some people, however it has a downside that holds it back: it has no application support. There are no third party applications built that can run on their device natively. It do have a web browser; but due to the nature of this device, browsing web applications on its screen is very uncomfortable. They realise that their potential customers don't want to leave their phone behind when they can't use their day-to-day applications properly. As a solution, they decide to make use of the open-source Intertext ecosystem. They build an Intertext client that runs natively on their device and renders IUIDL optimised for its input/output (I/O) constraints. With their new Intertext client, they now have access to the entirety of the Intertext applications. They are now set to release their product with no compromises and full confidence.
+X, Inc is a promising startup working on a new kind of wearable device. This device can perform all functions of a mobile phone; make calls, send messages, take pictures, browse the internet and so on. It has the potential to replace mobile devices for some people, however it has a downside that holds it back: it has no application support. There are no third~party applications built that can run on their device natively. It do have a web browser; but due to the nature of this device, browsing web applications on its screen is very uncomfortable. They realise that their potential customers don't want to leave their phone behind when they can't use their day-to-day applications properly. As a solution, they decide to make use of the open-source Intertext ecosystem. They build an Intertext client that runs natively on their device and renders IUIDL optimised for its input/output (I/O) constraints. With their new Intertext client, they now have access to the entirety of the Intertext applications. They are now set to release their product with no compromises and full confidence.
 
 \subsection{Clients For Special Needs}
 
@@ -54,7 +54,7 @@ For the time being, only the web client of Intertext is fully implemented. There
   \label{fig:rec_signin_signup}%
 \end{figure}
 
-First, a user visits the URL the RecipeApp is served from via the address bar above. In figure~\ref{fig:rec_signin_signup} the example server runs on \texttt{http://localhost:3000} and the endpoint RecipeApp is served from is \texttt{/recipes}. If user is not already signed in, they will be redirected to \texttt{/recipes/signin}. After signing in from this screen, they will be redirected back to the application. If they were visiting a particular URL such as \texttt{/recipes/new} or \texttt{/recipes/3} before they got redirected to the sign in screen, they will be redirected back to that screen after signing in. Once they are signed in, they will be presented with the recipe list. The recipe list has two view options, grid view and list view, which user can chose between. The view selection will persist across sessions. Moreover, the list features a search bar, which can be used to search recipes by keywords. On each recipe item, there difficulty and time it takes to prepare the recipe is displayed along with an image. From the top navigation, user can click on the Add Recipe button to go to the insert page. From there, they can insert their own recipe.
+First, a user visits the URL the RecipeApp is served from via the address bar above. In Figure~\ref{fig:rec_signin_signup} the example server runs on \texttt{http://localhost:3000} and the endpoint RecipeApp is served from is \texttt{/recipes}. If the user is not already signed in, they will be redirected to \texttt{/recipes/signin}. After signing in from this screen, they will be redirected back to the application. If they were visiting a particular URL such as \texttt{/recipes/new} or \texttt{/recipes/3} before they got redirected to the sign in screen, they will be redirected back to that screen after signing in. Once they are signed in, they will be presented with the recipe list. The recipe list has two view options, grid view and list view, which user can chose between. The view selection will persist across sessions. Moreover, the list features a search bar, which can be used to search recipes by keywords. On each recipe item, there difficulty and time it takes to prepare the recipe is displayed along with an image. From the top navigation, user can click on the Add Recipe button to go to the insert page. From there, they can insert their own recipe.
 
 \subsection{Authentication}
 
@@ -133,7 +133,7 @@ In this section, we explain how we conducted our user study for user evaluation.
 
 We conducted our user study in the form of surveys. We used Google Forms to create the survey and manage the responses. In the surveys, we first gave some information and/or material to investigate, then followed it with Likert scale questions.
 
-We utilised Amazon's Mechanical Turk (MTurk) \footnote{\url{https://www.mturk.com}} service in order to find participants. We stated the description and intentions of each survey on their respective survey page. Some of our surveys required special skills, for which we used features provided by MTurk that enables us to only target participants with special skills. We set the compensation price per answer to 10 cents for general participation surveys, and 50 cents for surveys that requires special skills. We required our participants to enter their \textit{worker id} both on the surveys and on the respective survey page on MTurk, so that we can match the responses of the participants with their MTurk profiles to verify only our intended audience has participated, and duplicate/invalid responses (responses that are submitted without a worker id) are eliminated.
+We utilised Amazon's Mechanical Turk (MTurk)\footnote{\url{https://www.mturk.com}} service in order to find participants. We stated the description and intentions of each survey on their respective survey page. Some of our surveys required special skills, for which we used features provided by MTurk that enables us to only target participants with special skills. We set the compensation price per answer to 10 cents for general participation surveys, and 50 cents for surveys that requires special skills. We required our participants to enter their \textit{worker id} both on the surveys and on the respective survey page on MTurk, so that we can match the responses of the participants with their MTurk profiles to verify only our intended audience has participated, and duplicate/invalid responses (responses that are submitted without a worker id) are eliminated.
 
 Our user evaluation was conducted in two stages. First stage was to validate the problems in our problem statement that we are intending to solve, and the second stage was to validate Intertext, the solution we offer in order to address these problems. 
 
@@ -151,7 +151,7 @@ In our Likert scale questions, we focused on the trade-offs in order to get answ
 
 \subsection{Phase 1 Results}
 
-In the first phase, we received 119 responses (after filtering out duplicate answers and answers with invalid worker ids). In this section we included some of the highlights of our survey; full response data and participant demographics can be found in the \nameref{App:AppendixA}. Our results for the first phase are very positive, we were able to validate the problem and implement Intertext with more confidence.
+In the first phase, we received 119 responses (after filtering out duplicate answers and answers with invalid worker ids). In this section we included some of the highlights of our survey; full response data and participant demographics can be found in the \nameref{App:AppendixA} A.3. Our results for the first phase are very positive, we were able to validate the problem and implement Intertext with more confidence.
 
 % ------ ui / ux
 
@@ -174,7 +174,7 @@ In the first phase, we received 119 responses (after filtering out duplicate ans
 \caption{\newline\textit{I experience UI/UX inconsistencies in some applications} (left)\newline\textit{I sometimes experience poor design in some applications} (right)} \label{fig:ev_p1_1}
 \end{figure}
 
-Our first two questions focuses on how users perceive applications they use on a daily basis in terms of user experience or user interfaces. We asked participants whether they experience poor design or inconsistent user interfaces/user experiences, and most of them responded by stating that they experience some form of an issue, as it can be seen in figure~\ref{fig:ev_p1_1}.
+Our first two questions focuses on how users perceive applications they use on a daily basis in terms of user experience or user interfaces. We asked participants whether they experience poor design or inconsistent user interfaces/user experiences, and most of them responded by stating that they experience some form of an issue, as it can be seen in Figure~\ref{fig:ev_p1_1}.
 
 % ------ ads 
 
@@ -197,7 +197,7 @@ Our first two questions focuses on how users perceive applications they use on a
 \caption{\newline\textit{Advertisement sector is out of control} (left)\newline\textit{I would rather pay a small fee than seeing ads} (right)} \label{fig:ev_p1_2}
 \end{figure}
 
-Next, we focused on advertisement, as it can be seen as one of the leading causes of frustration and a major aspect that hinders user experience for many users. As we expected, there is a strong opinion against advertisement. There seems to be a consensus that the advertisement sector is out of control, and more than 65\% of our participants stated that they use an ad blocking software. In order to understand the extent of the frustration, we asked whether participants would be willing to pay a small fee rather than seeing ads, more than half of our participants responded positively as it can be seen in figure~\ref{fig:ev_p1_2}. Detailed information on the responses related to advertisement can be found in the \nameref{App:AppendixA}.
+Next, we focused on advertisement, as it can be seen as one of the leading causes of frustration and a major aspect that hinders user experience for many users. As we expected, there is a strong opinion against advertisement. There seems to be a consensus that the advertisement sector is out of control, and more than 65\% of our participants stated that they use an ad blocking software. In order to understand the extent of the frustration, we asked whether participants would be willing to pay a small fee rather than seeing ads, more than half of our participants responded positively as it can be seen in Figure~\ref{fig:ev_p1_2}. Detailed information on the responses related to advertisement can be found in the \nameref{App:AppendixA} A.3.
 
 % ------ customisability
 
@@ -220,7 +220,7 @@ Next, we focused on advertisement, as it can be seen as one of the leading cause
 \caption{\newline\textit{I wish I was able to customise the appearances of websites/applications} (left)\newline\textit{I wish I could choose or create a universal theme that would apply to all websites/applications} (right)} \label{fig:ev_p1_3}
 \end{figure}
 
-Customisability is another aspect we asked our participants about. While some specific applications, such as code editors allows extensive customisation for their end users, it is not a very common in typical front-end applications. In the recent years, design trends that has been surfacing suggests some level of customisation options are being offered by modern front-end applications, and these changes are often greatly appreciated by many users. For instance, Github recently released a dark mode option and announced this new feature on the Twitter platform \footnote{https://twitter.com/github/status/1336362679506784256}. The extent of support and appreciation can be seen from the responses. However customisability is usually limited to simple adjustments such as the colour theme and font sizes. The responses we received as it can be seen in figure~\ref{fig:ev_p1_3} shows that users are mostly positive about possibilities of extended customisability offerings. Furthermore we asked participants their opinion on a universal theme that would apply to all websites/applications they use, hinting to the unified approach that Intertext adopts, and we received even more positive responses, more than 65\% of our users responded positively.
+Customisability is another aspect we asked our participants about. While some specific applications, such as code editors allows extensive customisation for their end users, it is not a very common in typical front-end applications. In the recent years, design trends that has been surfacing suggests some level of customisation options are being offered by modern front-end applications, and these changes are often greatly appreciated by many users. For instance, Github recently released a dark mode option and announced this new feature on the Twitter platform\footnote{https://twitter.com/github/status/1336362679506784256}. The extent of support and appreciation can be seen from the responses. However customisability is usually limited to simple adjustments such as the colour theme and font sizes. The responses we received as it can be seen in Figure~\ref{fig:ev_p1_3} shows that users are mostly positive about possibilities of extended customisability offerings. Furthermore we asked participants their opinion on a universal theme that would apply to all websites/applications they use, hinting to the unified approach that Intertext adopts, and we received even more positive responses, more than 65\% of our users responded positively.
 
 % ------ cross-platform availability
 
@@ -338,7 +338,7 @@ Then, we asked about the implications of Intertext on advertisement. Intertext p
 \caption{\textbf{end user survey}\newline\textit{I would benefit from the guaranteed accessibility aspect of Intertext}} \label{fig:ev_p2_3}
 \end{figure}
 
-Next, we had a question on accessibility. Intertext provides components out-of-the-box, all of which are implemented in an accessible way. Thus, Intertext applications that are made out of these components will surely be accessible. For this question, we had a paragraph clarifying to the scope of accessibility; that accessibility is not only for people with disabilities, but how and why in can benefit everyone \footnote{https://www.w3.org/standards/webdesign/accessibility}. Then we asked whether they would personally benefit from Intertext in terms of accessibility perspective, and most of the participants stated that they would.
+Next, we had a question on accessibility. Intertext provides components out-of-the-box, all of which are implemented in an accessible way. Thus, Intertext applications that are made out of these components will surely be accessible. For this question, we had a paragraph clarifying to the scope of accessibility; that accessibility is not only for people with disabilities, but how and why in can benefit everyone\footnote{https://www.w3.org/standards/webdesign/accessibility}. Then we asked whether they would personally benefit from Intertext in terms of accessibility perspective, and most of the participants stated that they would.
 
 % ------ customisability
 
@@ -433,4 +433,4 @@ Intertext guarantees security/privacy by preventing third-party code execution o
 \newline- \textit{maintenance} (right)} \label{fig:ev_p2_7}
 \end{figure}
 
-As for the developer survey, we received a mix of positive and neutral responses. In this survey, we gave an overall rundown of Intertext and provided a technical overview with a demo codebase. Then we asked developers whether or not they would prefer using Intertext for benefits in cross-platform support, accessibility and maintenance. In all three categories the responses were mostly positive as seen in figure~\ref{fig:ev_p2_7}.
+As for the developer survey, we received a mix of positive and neutral responses. In this survey, we gave an overall rundown of Intertext and provided a technical overview with a demo codebase. Then we asked developers whether or not they would prefer using Intertext for benefits in cross-platform support, accessibility and maintenance. In all three categories the responses were mostly positive as seen in Figure~\ref{fig:ev_p2_7}.
