--- a/thesis/paper/sections/7_appendix.tex
+++ b/thesis/paper/sections/7_appendix.tex
@@ -1,7 +1,7 @@
 \chapter{Appendix} \label{App:AppendixA}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{0}}
 
-\section{Source Codes and Demos}
+\section{Source Code and Demo}
 
 \begin{itemize}
     \item Intertext source code: \url{https://github.com/oguzgelal/intertext}
